[project]
name = "zenn-sat"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaede Fujisaki",email = "kaede@hexe.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "z3-solver (>=4.15.3.0,<5.0.0.0)"
]

[tool.poetry]
packages = [{include = "zenn_sat", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
